removed column border + corrected spacing

--- a/src/components/TestCellState/assets/styles/App.css
+++ b/src/components/TestCellState/assets/styles/App.css
@@ -22,7 +22,8 @@
     /*margin: 10px;*/
     border-radius: 10px;
     /*box-shadow: 1px 1px 3px rgba(0,0,0,0.5);*/
-    border: 1px solid #a49f9f; /* Параметры границы */
+    /*border: 1px solid #a49f9f;*/
+    /* Параметры границы */
     display: flex;
     /*margin-left: 2px;*/
     /*margin-top: 2px;*/
